k8s/client-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: yuriiknowsjava/multi-client
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 256Mi
              cpu: "0.5"
            requests:
              memory: 128Mi
              cpu: "0.2"
