k8s/postgres-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres # all psql data will be in this directory on PV
          resources:
            limits:
              memory: 256Mi
              cpu: "0.5"
            requests:
              memory: 128Mi
              cpu: "0.2"
